--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-open": "^3.0.1"
-  }
+  },
+  "scripts": {
+    "start": "node index.js"
+ }
+ 
 }
